# midnightmega

./: .gitignore  .gitmodules  fakedisk.d81  readme.md  versions.txt  versions_calypsi.txt  versions_llvm-mos.txt
calypsi/: calypsi-midnightmega.bat  calypsi.h  conioextensions.lst  datadisk.d81  fileio.c  fileio.h  fileio.lst  hyppo.c  hyppo.h  hyppo.lst  mega65-midnightmega.scm  mega65-setup.scm  midnightmega  midnightmega.c  midnightmega.d81  midnightmega.lst  midnightmega.prg  midnightmegatext.src  nav.c  nav.h  nav.lst  regions.h  romlist.c  romlist.h  romlist.lst  romlister.c  romlister.lst  romlister.prg  sid.c  sid.lst  testjmp.h  texts.c  texts.h  texts.lst
docsrc/: readmesrc.md
kickc/: kickc-midnightmega.bat  libc.h  midnightmega - Kopie.asm  midnightmega.asm  midnightmega.c  midnightmega.d81  midnightmega.dbg  midnightmega.klog  midnightmega.prg  midnightmega.vs  minime.h  nonworking.h  xmega65 midnightmega.d81.lnk
llvm/: conio.c  conioextensions.c  conioextensions.h  datadisk.d81  datadisk.ro  dbgmidnightmega.prg  emumidnightmega.prg  fakedisk.d81  fileio.c  fileio.h  help.seq  help.txt  ht2.d81  ht2.src.bas  ht2.src.prg  hyppo.c  hyppo.h  libc.h  llvm-midnightmega-help.bat  llvm-midnightmega.bat  makefakedisk.bat  makefakedisk.sh  maketextseqfile.cmd  maketextseqfile.sh  mega65.bas  mega65.bas.prg  mega65lower.bas  memory.c  midnightmega.c  (+31 more)
ninja/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  compile_commands.json  hello-putchar.c  libc.h  make.bat  midnightmega.c
ninja/include/: mega65-dma.h  mega65-math.h
(+10 files in other folders)
